--- a/conditionals.html
+++ b/conditionals.html
@@ -5,6 +5,13 @@
     <title>Conditionals JS</title>
 </head>
 <body>
+<style>
+    body {
+        background-color: black;
+        color: white;
+        font-family: Arial;
+    }
+</style>
 
 <h1>Conditionals JS</h1>
 
