--- a/loops.html
+++ b/loops.html
@@ -8,7 +8,7 @@
 
 <style>
     body {
-        font-family: Arial;
+        font-family: Arial,serif;
         background-color: black;
         color: white;
         margin-left: 30px;
