--- a/welcome.html
+++ b/welcome.html
@@ -10,6 +10,23 @@
 
 <h1>Hello, World!</h1>
 
+<div>
+    <strong><em>Veridian Dynamics</em></strong>
+</div>
+
+<img src="https://java.codeup.com/examples/html/welcome.png" alt="Veridian Dynamics">
+
+<!--We will be creating a landing page for the fictional company Veridian Dynamics.-->
+<!--Recreate this image with HTML, focusing only in the HTML elements necessary to have a good structure.-->
+
+<!--Specifications:-->
+
+<!--Make sure the text in the tag line below the heading at the top is properly bolded and italicized.-->
+<!--The pricing plan at the bottom is a table.-->
+<!--The link at the bottom of the page should take you to the top of the page when clicked.-->
+<!--Use semantic elements for the layout.-->
+<!--You can obtain free stock photos to work with from pexels.-->
+
 
 
 </body>
