--- a/welcome.html
+++ b/welcome.html
@@ -8,26 +8,61 @@
 
 
 
-<h1>Hello, World!</h1>
+<h1>Welcome to Veridian Dynamics</h1>
+<p>At Veridian Dynamics, <strong>we</strong> solve <em>your</em> problems with <strong><em>technology</em></e></strong></p>
+<h2>Core values</h2>
+<ul>
+    <li>Competence</li>
+    <li>Involvement</li>
+    <li>Technology</li>
+</ul>
+<h2>Our Process</h2>
+<ol>
+    <li>Competence</li>
+    <li>Involvement</li>
+    <li>Technology</li>
+</ol>
+<h2>2020 Vision</h2>
+<ul>
+    <li>Become # 1 in Technology</li>
+    <li>Increase Success by 20%</li>
+    <li>Increase Business by 20%</li>
+</ul>
+<h2>Company Vision</h2>
 
-<div>
-    <strong><em>Veridian Dynamics</em></strong>
-</div>
+<img height="100px" src="https://www.thestreet.com/.image/ar_16:9%2Cc_fill%2Ccs_srgb%2Cg_faces:center%2Cq_auto:good%2Cw_768/MTY3NTM5MzU5MDg3MjczODcw/business-structure-which-type-is-best-for-your-business.png" alt="">
+<img height="100px" src="https://blog.vantagecircle.com/content/images/2019/03/7-Ways-to-Build-a-Strong-Company-Culture.png" alt="">
+<br>
+<img height="100px" src="https://24slides.com/presentbetter/content/images/wordpress/2018/12/company-profile-presentation-tips.jpg" alt="">
+<img height="100px" src="https://archive.mbda.gov/sites/mbda.gov/files/styles/scale_700w/public/migrated/inline-images/mergers7530.jpg?itok=XI0txLBL" alt="">
 
-<img src="https://java.codeup.com/examples/html/welcome.png" alt="Veridian Dynamics">
+<h2>Our Product</h2>
 
-<!--We will be creating a landing page for the fictional company Veridian Dynamics.-->
-<!--Recreate this image with HTML, focusing only in the HTML elements necessary to have a good structure.-->
+<table>
+    <tr>
+        <th>Plan</th>
+        <th>Price</th>
+        <th>Features</th>
+    </tr>
+    <tr>
+        <td>Starter</td>
+        <td>$99</td>
+        <td>Base Technology</td>
+    </tr>
+    <tr>
+        <td>Advanced</td>
+        <td>$199</td>
+        <td>Additional Features</td>
+    </tr>
+    <tr>
+        <td>Premium</td>
+        <td>$499</td>
+        <td>Unlimited Support</td>
+    </tr>
+</table>
 
-<!--Specifications:-->
-
-<!--Make sure the text in the tag line below the heading at the top is properly bolded and italicized.-->
-<!--The pricing plan at the bottom is a table.-->
-<!--The link at the bottom of the page should take you to the top of the page when clicked.-->
-<!--Use semantic elements for the layout.-->
-<!--You can obtain free stock photos to work with from pexels.-->
-
-
+<br>
+<a href="#top">Go to the top of the page.</a>
 
 </body>
 </html>
