--- a/github.html
+++ b/github.html
@@ -41,6 +41,11 @@
     div {
       font-family: Arial,serif;
     }
+    .header-container {
+        height: 90px;
+        background-color: rgb(250,251,252);
+        border: solid 1px rgba(191, 191, 193);
+    }
     .container-master {
       display: flex;
       width: 100%;
@@ -81,6 +86,10 @@
       <a>Explore</a>
     </nav>
   </header>
+  <div class="header-container">
+      <img src="">
+      Codeup
+  </div>
 
   <div class="container-master">
       <div class="container-1">Codeup's dev team</div>
