--- a/github.html
+++ b/github.html
@@ -25,7 +25,7 @@
     }
     a {
       font-family: Arial,serif;
-      color: white;
+      color: rgb(196 197 199);
       margin: 0 10px;
       cursor: pointer;
     }
@@ -35,41 +35,91 @@
     .github-icon {
       display: flex;
       filter: invert(100%);
-      margin: 0 10px;
+      margin: 0 13px;
       cursor: pointer;
     }
     div {
       font-family: Arial,serif;
     }
     .header-container {
-        height: 90px;
+        height: 100px;
         background-color: rgb(250,251,252);
         border: solid 1px rgba(191, 191, 193);
+        padding-left: 10px;
+        padding-top: 20px;
+        padding-right: 5px;
+    }
+    .codeup {
+        display: flex;
+        align-items: center;
+        font-size: 20px;
+    }
+    .quick-ref {
+        display: flex;
+    }
+    .quick-ref-links {
+        display: flex;
+        color: gray;
+        text-decoration: none;
+        margin-top: 30px;
+        padding-left: 20px;
+    }
+    .notification{
+        display: flex;
+        margin-top: 33px;
+        height: 15px;
+        text-align: center;
+        font-size: 10px;
+        background-color: rgb(233 234 235);
+        border: solid 1px transparent;
+        border-radius: 10px;
+        margin-left: -5px;
+    }
+    #codeup-img {
+        padding-right: 5px;
     }
     .container-master {
       display: flex;
-      width: 100%;
       border: solid 1px rgb(223 221 227);
       margin: 20px 20px;
       border-radius: 4px;
       flex-direction: column;
     }
     .container-1 {
-      display: flex;
-      width: 100%;
-      justify-content: flex-start;
-      border: solid 1px rgb(223 221 227);
+        display: flex;
+        background-color: rgb(246 247 250);
+        height: 40px;
+        width: auto;
+        justify-content: flex-start;
+        padding: 15px 0 0 30px;
+        border: solid 1px rgb(223 221 227);
     }
-    .container-2 {
-      display: flex;
-      width: 100%;
-      justify-content: flex-start;
-      border: solid 1px rgb(223 221 227);
+    .container-1-1 {
+        display: flex;
+        width: auto;
+        justify-content: flex-start;
+        border: solid 1px rgb(223 221 227);
+        padding-left: 40px;
+        padding-top: 20px;
+        padding-bottom: 20px;
     }
-    .container-links {
+    .container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    .container-links-container {
+        display: flex;
       color: blue;
       cursor: pointer;
     }
+    .container-handle {
+        display: flex;
+        width: auto;
+        align-content: flex-start;
+        margin-left: 10px;
+    }
+
   </style>
   
 </head>
@@ -87,14 +137,39 @@
     </nav>
   </header>
   <div class="header-container">
-      <img src="">
-      Codeup
+      <div class="codeup">
+          <img id="codeup-img" height="40px" src="https://coursereport-s3-production.global.ssl.fastly.net/uploads/school/logo/59/original/CodeupFullColorChevronYT.jpg" alt="">
+          Codeup
+      </div>
+      <div class="quick-ref">
+          <a class="quick-ref-links" href="">Repositories</a><button class="notification">39</button>
+          <a class="quick-ref-links" href="">People</a><button class="notification">15</button>
+          <a class="quick-ref-links" href="">Teams</a><button class="notification">7</button>
+          <a class="quick-ref-links" href="">Projects</a><button class="notification">0</button>
+          <a class="quick-ref-links" href="">Settings</a>
+      </div>
   </div>
 
   <div class="container-master">
-      <div class="container-1">Codeup's dev team</div>
-      <div class="container-2"><a class="container-links">Kent Beck</a></div>
-    </div>
+      <div class="container-1">
+          <strong>Codeup's dev team</strong>
+      </div>
+      <div class="container-1-1">
+          <img height="60px" src="https://i.stack.imgur.com/frlIf.png" alt="git-icon">
+          <div class="container">
+              <a class="container-links-container">Kent Beck</a>
+              <div class="container-handle">Kent Beck</div>
+          </div>
+      </div>
+      <div class="container-1-1">
+          <img height="60px" src="https://i.stack.imgur.com/frlIf.png" alt="git-icon">
+          <div class="container">
+              <a class="container-links-container">Codeup Instruction Staff</a>
+              <div class="container-handle">Codeup Instructors</div>
+          </div>
+      </div>
+  </div>
+
 
 
 
