--- a/github.html
+++ b/github.html
@@ -169,8 +169,25 @@
           </div>
       </div>
   </div>
-
-
+  <hr>
+  <div class="bottom">
+      <div>
+    &#169;2018 GitHub.Inc
+    <a class="bottom-links">Terms</a>
+    <a class="bottom-links">Privacy</a>
+    <a class="bottom-links">Security</a>
+    <a class="bottom-links">Status</a>
+    <a class="bottom-links">Help</a>
+      </div>
+      <div>
+          <a class="bottom-links">Contact GitHub</a>
+          <a class="bottom-links">API</a>
+          <a class="bottom-links">Training</a>
+          <a class="bottom-links">Shop</a>
+          <a class="bottom-links">Blog</a>
+          <a class="bottom-links">About</a>
+      </div>
+  </div>
 
 
 
