--- a/github.html
+++ b/github.html
@@ -3,125 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Github.com</title>
-  <link rel="stylesheet" href="css/github.css">
-<!--  <style>-->
-<!--    body {-->
-<!--      margin: 0;-->
-<!--    }-->
-<!--    header {-->
-<!--      display: flex;-->
-<!--      height: 55px;-->
-<!--      width: 100%;-->
-<!--      background-color: rgba(42, 44, 49);-->
-<!--      align-items: center;-->
-<!--      align-content: center;-->
-<!--    }-->
-<!--    nav {-->
-<!--      display: flex;-->
-<!--      align-content: center;-->
-<!--      justify-content: flex-start;-->
-<!--      align-items: center;-->
-<!--      margin: 0 10px;-->
-<!--    }-->
-<!--    a {-->
-<!--      font-family: Arial,serif;-->
-<!--      color: rgb(196 197 199);-->
-<!--      margin: 0 10px;-->
-<!--      cursor: pointer;-->
-<!--    }-->
-<!--    a:hover {-->
-<!--      color: rgba(191, 191, 193);-->
-<!--    }-->
-<!--    .github-icon {-->
-<!--      display: flex;-->
-<!--      filter: invert(100%);-->
-<!--      margin: 0 13px;-->
-<!--      cursor: pointer;-->
-<!--    }-->
-<!--    div {-->
-<!--      font-family: Arial,serif;-->
-<!--    }-->
-<!--    .header-container {-->
-<!--        height: 100px;-->
-<!--        background-color: rgb(250,251,252);-->
-<!--        border: solid 1px rgba(191, 191, 193);-->
-<!--        padding-left: 10px;-->
-<!--        padding-top: 20px;-->
-<!--        padding-right: 5px;-->
-<!--    }-->
-<!--    .codeup {-->
-<!--        display: flex;-->
-<!--        align-items: center;-->
-<!--        font-size: 20px;-->
-<!--    }-->
-<!--    .quick-ref {-->
-<!--        display: flex;-->
-<!--    }-->
-<!--    .quick-ref-links {-->
-<!--        display: flex;-->
-<!--        color: gray;-->
-<!--        text-decoration: none;-->
-<!--        margin-top: 30px;-->
-<!--        padding-left: 20px;-->
-<!--    }-->
-<!--    .notification{-->
-<!--        display: flex;-->
-<!--        margin-top: 33px;-->
-<!--        height: 15px;-->
-<!--        text-align: center;-->
-<!--        font-size: 10px;-->
-<!--        background-color: rgb(233 234 235);-->
-<!--        border: solid 1px transparent;-->
-<!--        border-radius: 10px;-->
-<!--        margin-left: -5px;-->
-<!--    }-->
-<!--    #codeup-img {-->
-<!--        padding-right: 5px;-->
-<!--    }-->
-<!--    .container-master {-->
-<!--      display: flex;-->
-<!--      border: solid 1px rgb(223 221 227);-->
-<!--      margin: 20px 20px;-->
-<!--      border-radius: 4px;-->
-<!--      flex-direction: column;-->
-<!--    }-->
-<!--    .container-1 {-->
-<!--        display: flex;-->
-<!--        background-color: rgb(246 247 250);-->
-<!--        height: 40px;-->
-<!--        width: auto;-->
-<!--        justify-content: flex-start;-->
-<!--        padding: 15px 0 0 30px;-->
-<!--        border: solid 1px rgb(223 221 227);-->
-<!--    }-->
-<!--    .container-1-1 {-->
-<!--        display: flex;-->
-<!--        width: auto;-->
-<!--        justify-content: flex-start;-->
-<!--        border: solid 1px rgb(223 221 227);-->
-<!--        padding-left: 40px;-->
-<!--        padding-top: 20px;-->
-<!--        padding-bottom: 20px;-->
-<!--    }-->
-<!--    .container {-->
-<!--        display: flex;-->
-<!--        flex-direction: column;-->
-<!--        justify-content: center;-->
-<!--    }-->
-<!--    .container-links-container {-->
-<!--        display: flex;-->
-<!--      color: blue;-->
-<!--      cursor: pointer;-->
-<!--    }-->
-<!--    .container-handle {-->
-<!--        display: flex;-->
-<!--        width: auto;-->
-<!--        align-content: flex-start;-->
-<!--        margin-left: 10px;-->
-<!--    }-->
-
-<!--  </style>-->
-  
+    <link rel="stylesheet" href="css/github.css">
 </head>
 <body>
 
@@ -138,7 +20,7 @@
   </header>
   <div class="header-container">
       <div class="codeup">
-          <img id="codeup-img" height="40px" src="https://coursereport-s3-production.global.ssl.fastly.net/uploads/school/logo/59/original/CodeupFullColorChevronYT.jpg" alt="">
+          <img id="codeup-img" height="40px" src="https://coursereport-s3-production.global.ssl.fastly.net/uploads/school/logo/59/original/CodeupFullColorChevronYT.jpg" alt="Codeup">
           Codeup
       </div>
       <div class="quick-ref">
@@ -162,7 +44,7 @@
           </div>
       </div>
       <div class="container-1-1">
-          <img height="60px" src="https://i.stack.imgur.com/frlIf.png" alt="git-icon">
+          <img height="52px" src="https://coursereport-s3-production.global.ssl.fastly.net/uploads/school/logo/59/original/CodeupFullColorChevronYT.jpg" alt="Codeup">
           <div class="container">
               <a class="container-links-container">Codeup Instruction Staff</a>
               <div class="container-handle">Codeup Instructors</div>
