--- a/forms.html
+++ b/forms.html
@@ -49,6 +49,7 @@
       <textarea name="bio" id="bio" placeholder="Tell us about yourself"></textarea>
       <br>
       <div class="radio-container">
+        <label for="how"></label>
         <input type="radio" name="how" value="billboard"> Billboard
         <input type="radio" name="how" value="radio"> Radio
         <input type="radio" name="how" value="internet"> Internet
