--- a/welcome.html
+++ b/welcome.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Hello, World!</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/welcome.css">
 </head>
 <body>
