--- a/forms.html
+++ b/forms.html
@@ -49,11 +49,17 @@
       <textarea name="bio" id="bio" placeholder="Tell us about yourself"></textarea>
       <br>
       <div class="radio-container">
-        <label for="how"></label>
-        <input type="radio" name="how" value="billboard"> Billboard
-        <input type="radio" name="how" value="radio"> Radio
-        <input type="radio" name="how" value="internet"> Internet
-        <input type="radio" name="how" value="other"> Other
+        <input type="radio" id="Billboard" name="how" value="billboard">
+        <label for="Billboard">Billboard</label>
+
+        <input type="radio" id="Radio" name="how" value="radio">
+        <label for="Radio">Radio</label>
+
+        <input type="radio" id="Internet" name="how" value="internet">
+        <label for="Internet">Internet</label>
+
+        <input type="radio" id="Other" name="how" value="other">
+        <label for="Other">Other</label>
       </div>
       <br>
     </div>
