--- a/welcome.html
+++ b/welcome.html
@@ -6,69 +6,61 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/welcome.css">
+    <link rel="stylesheet" href="css/style.css" >
 </head>
 <body>
-
-
-
-<h1 class="fancy-header">Welcome to Veridian Dynamics</h1>
-<p>At Veridian Dynamics, <strong>we</strong> solve <em>your</em> problems with <strong><em>technology</em></e></strong></p>
-<hr>
-<h2>Core values</h2>
-<ul>
-    <li>Competence</li>
-    <li>Involvement</li>
-    <li>Technology</li>
-</ul>
-<h2>Our Process</h2>
-<ol>
-    <li>Competence</li>
-    <li>Involvement</li>
-    <li>Technology</li>
-</ol>
-<h2>2020 Vision</h2>
-<ul>
-    <li>Become # 1 in Technology</li>
-    <li>Increase Success by 20%</li>
-    <li>Increase Business by 20%</li>
-</ul>
-<hr>
-<h2>Company Vision</h2>
-
-<img height="100px" src="https://www.thestreet.com/.image/ar_16:9%2Cc_fill%2Ccs_srgb%2Cg_faces:center%2Cq_auto:good%2Cw_768/MTY3NTM5MzU5MDg3MjczODcw/business-structure-which-type-is-best-for-your-business.png" alt="">
-<img height="100px" src="https://blog.vantagecircle.com/content/images/2019/03/7-Ways-to-Build-a-Strong-Company-Culture.png" alt="">
-<br>
-<img height="100px" src="https://24slides.com/presentbetter/content/images/wordpress/2018/12/company-profile-presentation-tips.jpg" alt="">
-<img height="100px" src="https://archive.mbda.gov/sites/mbda.gov/files/styles/scale_700w/public/migrated/inline-images/mergers7530.jpg?itok=XI0txLBL" alt="">
-
-<h2>Our Product</h2>
-
-<table>
-    <tr>
-        <th>Plan</th>
-        <th>Price</th>
-        <th>Features</th>
-    </tr>
-    <tr>
-        <td>Starter</td>
-        <td>$99</td>
-        <td>Base Technology</td>
-    </tr>
-    <tr>
-        <td>Advanced</td>
-        <td>$199</td>
-        <td>Additional Features</td>
-    </tr>
-    <tr>
-        <td>Premium</td>
-        <td>$499</td>
-        <td>Unlimited Support</td>
-    </tr>
-</table>
-
-<br>
-<a href="#top">Go to the top of the page.</a>
-
+    <h1 class="fancy-header">Welcome to Veridian Dynamics</h1>
+    <p class="header-paragraph" >At Veridian Dynamics, <strong>&nbsp;we</strong> &nbsp;solve <em>&nbsp;your&nbsp;</em> problems with <strong><em>&nbsp;technology</em></e></strong></p>
+    <hr>
+    <h2>Core values</h2>
+    <ul>
+        <li>Competence</li>
+        <li>Involvement</li>
+        <li>Technology</li>
+    </ul>
+    <h2>Our Process</h2>
+    <ol>
+        <li>Competence</li>
+        <li>Involvement</li>
+        <li>Technology</li>
+    </ol>
+    <h2>2020 Vision</h2>
+    <ul>
+        <li>Become # 1 in Technology</li>
+        <li>Increase Success by 20%</li>
+        <li>Increase Business by 20%</li>
+    </ul>
+    <hr>
+    <h2>Company Vision</h2>
+    <img height="100px" src="img/business-structure-which-type-is-best-for-your-business.png" alt="looking-up-at-a-skyscraper-that-is-mostly-glass">
+    <img height="100px" src="img/7-Ways-to-Build-a-Strong-Company-Culture.png" alt="illustration-of-people-working-with-flat-colors">
+    <br>
+    <img height="100px" src="img/company-profile-presentation-tips.jpg" alt="man-showing-a-group-of-people-a-presentation">
+    <img height="100px" src="img/mergers7530.jpg" alt="shaking-hands-in-a-city">
+    <h2>Our Product</h2>
+    <table>
+        <tr>
+            <th>Plan</th>
+            <th>Price</th>
+            <th>Features</th>
+        </tr>
+        <tr>
+            <td>Starter</td>
+            <td>$99</td>
+            <td>Base Technology</td>
+        </tr>
+        <tr>
+            <td>Advanced</td>
+            <td>$199</td>
+            <td>Additional Features</td>
+        </tr>
+        <tr>
+            <td>Premium</td>
+            <td>$499</td>
+            <td>Unlimited Support</td>
+        </tr>
+    </table>
+    <br>
+    <a href="#top">Go to the top of the page.</a>
 </body>
 </html>
