--- a/login-form.html
+++ b/login-form.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <main>
-    <form action="#">
+    <form action="#" class="form">
         <fieldset class="width-80">
             <div class="form-group">
                 <label for="username" class="form-label">Username</label>
