--- a/defuse-the-bom.html
+++ b/defuse-the-bom.html
@@ -23,7 +23,7 @@
                 alert('EXTERMINATE!');
                 document.body.innerHTML = '';
             } else if (detonationTimer > 0) {
-                document.getElementById('timer').innerHTML = detonationTimer;
+                document.getElementById('timer').innerHTML = `${detonationTimer}`;
             }
             detonationTimer--;
         }
