diffused the BOM

--- a/defuse-the-bom.html
+++ b/defuse-the-bom.html
@@ -3,6 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Defuse the BOM</title>
+  <style>
+    body {
+        background-color: #000;
+        color: #f00;
+    }
+  </style>
 </head>
 <body>
 
