--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -8,9 +8,9 @@
 </head>
 <body>
 
-<div class="wrapper" id="div">
-  <h1 class="header" id="h1">Codeup</h1>
-  <ul class="list" id="ul">
+<div class="codeup" id="div">
+  <h1 class="codeup" id="h1">Codeup</h1>
+  <ul class="list" id="codeup">
     <li class="list-item" id="li-1">HTML</li>
     <li class="list-item" id="li-2">CSS</li>
     <li class="list-item" id="li-3">JS</li>
@@ -30,8 +30,7 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
 
-  let contents = $(`#h1`).html();
-  alert(contents);
+  $(`.codeup`).css(`border`, `1px solid red`)
 
 </script>
 </body>
