Element Selectors completed

--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -10,6 +10,7 @@
 
 <div class="codeup" id="div">
   <h1 class="codeup" id="h1">Codeup</h1>
+  <p>Codeup Curriculum</p>
   <ul class="list" id="codeup">
     <li class="list-item" id="li-1">HTML</li>
     <li class="list-item" id="li-2">CSS</li>
@@ -30,7 +31,10 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
 
-  $(`.codeup`).css(`border`, `1px solid red`)
+  $(`.list-item`).css(`font-size`, `20px`)
+  $(`h1`).css(`background-color`, `red`)
+  $(`p`).css(`background-color`, `green`)
+  $(`li`).css(`background-color`, `blue`)
 
 </script>
 </body>
