--- a/jquery_faq.html
+++ b/jquery_faq.html
@@ -19,45 +19,35 @@
   <h1>National Park Facts</h1>
   <dl>
     <dt>Grand Canyon is</dt>
-    <dd class="invisible">Known as one of the Seven Natural Wonders of the World.</dd>
-    <br>
+    <dd class="invisible" style="margin-bottom: 1em;">Known as one of the Seven Natural Wonders of the World.</dd>
 
     <dt>California's Sequoia National Park is</dt>
-    <dd class="invisible">home to the largest living single-stem tree in the world named General Sherman.</dd>
-    <br>
+    <dd class="invisible" style="margin-bottom: 1em;">home to the largest living single-stem tree in the world named General Sherman.</dd>
 
     <dt>The Great Smoky Mountains National Park is</dt>
-    <dd class="invisible">the most visited National Park with more than 9 million guests per year.</dd>
-    <br>
+    <dd class="invisible" style="margin-bottom: 1em;">the most visited National Park with more than 9 million guests per year.</dd>
 
     <dt>Mount McKinley in the Alaska Range of Denali National Park is</dt>
-    <dd class="invisible">the highest point in the national parks ar 20,302 feet.</dd>
-    <br>
+    <dd class="invisible" style="margin-bottom: 1em;">the highest point in the national parks ar 20,302 feet.</dd>
 
     <dt>Mammoth Cave National Park in Kentucky</dt>
-    <dd class="invisible">has the longest cave system in the world with more than 3,454 mapped miles.</dd>
-    <br>
+    <dd class="invisible" style="margin-bottom: 1em;">has the longest cave system in the world with more than 3,454 mapped miles.</dd>
 
     <dt>Only one state in the US is</dt>
-    <dd class="invisible">not lucky enough to have a National park or monument. It is the first state. Delaware</dd>
-    <br>
+    <dd class="invisible" style="margin-bottom: 1em;">not lucky enough to have a National park or monument. It is the first state. Delaware</dd>
 
     <dt>In 2014, authorities at the Sequoia National Park found</dt>
-    <dd class="invisible">a $36 million marijuana cultivation operation just half a mile from a popular tourist area
+    <dd class="invisible" style="margin-bottom: 1em;">a $36 million marijuana cultivation operation just half a mile from a popular tourist area
     </dd>
-    <br>
 
     <dt>White Sands National Monument spans more than</dt>
-    <dd class="invisible">176,000 acres of New Mexico desert and contains the world's largest gypsum dune fields</dd>
-    <br>
+    <dd class="invisible" style="margin-bottom: 1em;">176,000 acres of New Mexico desert and contains the world's largest gypsum dune fields</dd>
 
     <dt>Mauna Loa Volcano in Hawaii Volcanoes National Park is the</dt>
-    <dd class="invisible">largest volcano on earth both in terms of height and volume.</dd>
-    <br>
+    <dd class="invisible" style="margin-bottom: 1em;">largest volcano on earth both in terms of height and volume.</dd>
 
     <dt>Bears have not killed a single person in Olympic National Park, but</dt>
-    <dd class="invisible">a mountain goat, which is not a native species to the region, killed a man in 2010.</dd>
-    <br>
+    <dd class="invisible" style="margin-bottom: 1em;">a mountain goat, which is not a native species to the region, killed a man in 2010.</dd>
   </dl>
 </div>
 
@@ -96,7 +86,7 @@
       $('.invisible').toggleClass('visible');
     });
     $(`dt`).click(function () {
-      $(this).css(`background-color`, `yellow`),
+      $(this).css(`background-color`, `yellow`)
         $(this).click(function () {
           $(this).css(`background-color`, `transparent`)
         });
